# easyspec

./: .gitignore  .travis.yml  LICENSE  README.md  file.hs  stack.yaml  zift.hs
easyspec/: easyspec.cabal  stack.yaml
easyspec-evaluate/: .gitignore  easyspec-evaluate.cabal
easyspec-evaluate/.shake/: .shake.database
easyspec-evaluate/app/: Main.hs
easyspec-evaluate/rscripts/: common.r  distribution-nr-different-functions-per-equation.r  evaluator_bars_per_group_strategies.r  evaluator_bars_per_group_strategies_on_demand.r  evaluator_bars_per_group_strategy.r  evaluators_bars_per_group.r  lines.r  occurrences-in-all-equations.r  occurrences-in-same-equation.r  points.r  runtime.r  single_evaluator_bar.r  single_evaluator_boxplot_average.r  single_evaluator_boxplot_average_global.r  single_evaluator_boxplot_on_demand.r  single_evaluator_boxplot_strategies.r  size-of-property.r
easyspec-evaluate/src/: Import.hs
easyspec-evaluate/src/EasySpec/: Evaluate.hs
easyspec-evaluate/src/EasySpec/Evaluate/: Analyse.hs  Build.hs  Evaluate.hs  HaskellJSON.hs  OptParse.hs  Types.hs
easyspec-evaluate/src/EasySpec/Evaluate/Analyse/: Archive.hs  Common.hs  Data.hs  Hackage.hs  Plots.hs  R.hs  Utils.hs
easyspec-evaluate/src/EasySpec/Evaluate/Analyse/Data/: Averages.hs  Common.hs  Content.hs  Evaluated.hs  Files.hs  Raw.hs  Types.hs
easyspec-evaluate/src/EasySpec/Evaluate/Analyse/Data/Common/: TH.hs
easyspec-evaluate/src/EasySpec/Evaluate/Analyse/Hackage/: TH.hs
easyspec-evaluate/src/EasySpec/Evaluate/Analyse/Plots/: BarsPerGroup.hs  CorrelatingPoints.hs  DistributionFromRawPlotter.hs  DistributionNrDifferentFunctions.hs  DistributionOccurrencesInAllEquations.hs  DistributionOccurrencesInSameEquation.hs  DistributionSizeOfProperty.hs  Files.hs  OnDemand.hs  Plotter.hs  RelativeLines.hs  ResultsPlots.hs  SingleEvaluatorBar.hs  SingleEvaluatorBox.hs
easyspec-evaluate/src/EasySpec/Evaluate/Evaluate/: Evaluator.hs
easyspec-evaluate/src/EasySpec/Evaluate/Evaluate/Evaluator/: Combinators.hs  Equations.hs  MaximumRelatedEquations.hs  MaximumRelatedFunctions.hs  RelevantEquations.hs  RelevantFunctions.hs  Runtime.hs  ScopeSize.hs  Types.hs  Utils.hs
easyspec-evaluate/src/EasySpec/Evaluate/OptParse/: Types.hs
easyspec-evaluate/test/: TestImport.hs
easyspec-evaluate/test/EasySpec/: EvaluateSpec.hs
easyspec-evaluate/test/EasySpec/Evaluate/: EvaluateSpec.hs
easyspec/app/: Main.hs
easyspec/src/: EasySpec.hs  Import.hs
easyspec/src/EasySpec/: Discover.hs  Gather.hs  OptParse.hs  Types.hs  Utils.hs
easyspec/src/EasySpec/Discover/: CodeUtils.hs  GHC.hs  Gather.hs  GatherFromGHC.hs  QuickSpec.hs  SignatureGeneration.hs  SignatureInference.hs  SourceGathering.hs  TH.hs  TypeTranslation.hs  Types.hs  Utils.hs
easyspec/src/EasySpec/Discover/SignatureInference/: Chunks.hs  ChunksPlus.hs  ChunksPlusSimilarity.hs  ChunksPlusUtils.hs  ChunksReachability.hs  ChunksSimilarityName.hs  ChunksSimilaritySymbols.hs  ChunksSimilarityType.hs  ChunksUtils.hs  EmptyBackground.hs  FullBackground.hs  FullBreakthrough.hs  IterativeChunks.hs  Monomorphisation.hs  ShrinkThenDrill.hs  SimilarityUtils.hs  SyntacticSimilarityEditDistanceName.hs  SyntacticSimilarityName.hs  SyntacticSimilaritySymbols.hs  SyntacticSimilarityType.hs  TypeReachability.hs  Utils.hs
easyspec/src/EasySpec/OptParse/: Types.hs
easyspec/test/: EasySpecSpec.hs  TestImport.hs  TestUtils.hs
easyspec/test/EasySpec/: DiscoverSpec.hs  GatherSpec.hs
easyspec/test/EasySpec/Discover/: SourceGatheringSpec.hs
easyspec/test/EasySpec/Discover/SignatureInference/: MonomorphisationSpec.hs  TypeReachabilitySpec.hs
easyspec/test/Language/Haskell/Exts/: Gen.hs
examples/: HugeList.hs  IO.hs  Length.hs  Mod1.hs  Monomorphic.hs  MySort.hs  Reachability.hs  Reverse.hi  Reverse.hs
examples-wishlist/: HugeList.hs  PathExample.hs  Tree.hs
examples/Mod1/: Mod2.hs
examples/Numerical/: Triple.hs
examples/evaluation/: Bools.hs  Crypto.hs  DNA.hs  Monoid.hs
examples/runtime/: Eight.hs  Eighteen.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  Nine.hs  One.hs  Seven.hs  Seventeen.hs  Six.hs  Sixteen.hs  Ten.hs  Thirteen.hs  Three.hs  Twelve.hs  Two.hs
examples/toy/: Bool.hs  HugeList.hs  Ints.hs  Lists.hs  Mod1.hs  MySort.hs  Reachability.hs  Reverse.hs  Sort.hs  ToUpper.hs
examples/toy/Mod1/: Mod2.hs
examples/toy/Numerical/: Triple.hs
