name: easyspec-evaluate
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        EasySpec.Evaluate
        EasySpec.Evaluate.Types
        EasySpec.Evaluate.OptParse
        EasySpec.Evaluate.OptParse.Types
    build-depends:
        base >=4.9 && <=5,
        optparse-applicative >=0.13
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable easyspec-evaluate
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec-evaluate -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite easyspec-evaluate-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec-evaluate -any,
        hspec -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
