name: easyspec-evaluate
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        EasySpec.Evaluate
        EasySpec.Evaluate.Types
        EasySpec.Evaluate.OptParse
        EasySpec.Evaluate.OptParse.Types
    build-depends:
        base >=4.9 && <=5,
        easyspec >=0.0 && <0.1,
        bytestring >=0.10 && <0.11,
        cassava >=0.4 && <0.5,
        optparse-applicative >=0.13,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        mtl >=2.2 && <2.3,
        timeit >=1.0 && <1.1,
        haskell-src-exts >=1.18 && <1.19
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable easyspec-evaluate
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec-evaluate -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite easyspec-evaluate-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec -any,
        easyspec-evaluate -any,
        QuickCheck >=2.9 && <2.10,
        genvalidity-hspec >=0.3 && <0.4,
        genvalidity-path >=0.1 && <0.2,
        hspec -any,
        mtl -any,
        path -any,
        path-io -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        EasySpec.EvaluateSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
