name: easyspec
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        EasySpec
        EasySpec.Discover
        EasySpec.Discover.GatherFromGHC
        EasySpec.Discover.QuickSpec
        EasySpec.Discover.SignatureGeneration
        EasySpec.Discover.SignatureInference
        EasySpec.Discover.TypeTranslation
        EasySpec.Discover.Types
        EasySpec.Discover.Utils
        EasySpec.OptParse
        EasySpec.OptParse.Types
        EasySpec.Types
    build-depends:
        base >=4.9 && <=5,
        optparse-applicative >=0.13,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        mtl >=2.2 && <2.3,
        ghc >=8.0.1 && <8.1,
        ghc-boot >=8.0.1 && <8.1,
        ghc-paths >=0.1 && <0.2,
        filepath >=1.4 && <1.5,
        quickspec >=2 && <3,
        jukebox ==0.2.14,
        haskell-src-exts >=1.18 && <1.19
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable easyspec
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite easyspec-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec -any,
        hspec -any,
        QuickCheck >=2.9 && <2.10,
        path -any,
        path-io -any,
        mtl >=2.2 && <2.3,
        genvalidity-hspec >=0.3 && <0.4,
        genvalidity-path >=0.1 && <0.2,
        haskell-src-exts -any,
        pretty-show -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        TestUtils
        EasySpecSpec
        EasySpec.GatherSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
