name: easyspec
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        EasySpec
        EasySpec.Discover
        EasySpec.Discover.CodeUtils
        EasySpec.Discover.GatherFromGHC
        EasySpec.Discover.QuickSpec
        EasySpec.Discover.SignatureGeneration
        EasySpec.Discover.SignatureInference
        EasySpec.Discover.SignatureInference.Chunks
        EasySpec.Discover.SignatureInference.ChunksPlus
        EasySpec.Discover.SignatureInference.ChunksPlusSimilarity
        EasySpec.Discover.SignatureInference.ChunksPlusUtils
        EasySpec.Discover.SignatureInference.ChunksSimilarityName
        EasySpec.Discover.SignatureInference.ChunksSimilaritySymbols
        EasySpec.Discover.SignatureInference.ChunksSimilarityType
        EasySpec.Discover.SignatureInference.ChunksUtils
        EasySpec.Discover.SignatureInference.EmptyBackground
        EasySpec.Discover.SignatureInference.FullBackground
        EasySpec.Discover.SignatureInference.Monomorphisation
        EasySpec.Discover.SignatureInference.ShrinkThenDrill
        EasySpec.Discover.SignatureInference.SimilarityUtils
        EasySpec.Discover.SignatureInference.SyntacticSimilarityEditDistanceName
        EasySpec.Discover.SignatureInference.SyntacticSimilarityName
        EasySpec.Discover.SignatureInference.SyntacticSimilaritySymbols
        EasySpec.Discover.SignatureInference.SyntacticSimilarityType
        EasySpec.Discover.SignatureInference.TypeReachability
        EasySpec.Discover.SignatureInference.Utils
        EasySpec.Discover.SourceGathering
        EasySpec.Discover.TH
        EasySpec.Discover.TypeTranslation
        EasySpec.Discover.Types
        EasySpec.Discover.Utils
        EasySpec.OptParse
        EasySpec.OptParse.Types
        EasySpec.Types
        EasySpec.Utils
    build-depends:
        base >=4.9 && <=5,
        containers >=0.5 && <0.6,
        edit-distance-vector >=1.0 && <1.1,
        filepath >=1.4 && <1.5,
        ghc >=8.0.1 && <8.1,
        ghc-boot >=8.0.1 && <8.1,
        ghc-paths >=0.1 && <0.2,
        hashable >=1.2 && <1.3,
        haskell-src-exts >=1.18 && <1.19,
        jukebox >=0.2.14,
        mtl >=2.2 && <2.3,
        optparse-applicative >=0.13,
        path >=0.5 && <0.6,
        path-io >=1.2 && <1.3,
        pretty-show -any,
        quickspec >=2 && <3,
        split >=0.2 && <0.3,
        template-haskell >=2.11 && <2.12,
        unordered-containers >=0.2 && <0.3,
        vector >=0.11 && <0.12,
        exceptions >=0.8 && <0.9
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    other-modules:
        Import
    ghc-options: -Wall

executable easyspec
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite easyspec-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        easyspec -any,
        hspec -any,
        QuickCheck >=2.9 && <2.10,
        path -any,
        path-io -any,
        mtl >=2.2 && <2.3,
        genvalidity-hspec >=0.3 && <0.4,
        genvalidity-path >=0.1 && <0.2,
        haskell-src-exts -any,
        safe >=0.3 && <0.4,
        pretty-show -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    other-modules:
        TestImport
        TestUtils
        EasySpec.Discover.SignatureInference.MonomorphisationSpec
        EasySpec.Discover.SignatureInference.TypeReachabilitySpec
        EasySpec.Discover.SourceGatheringSpec
        EasySpec.DiscoverSpec
        EasySpec.GatherSpec
        EasySpecSpec
        Language.Haskell.Exts.Gen
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
